...
                                                    <rect key="frame" x="16" y="0.0" width="361" height="312"/>
                                                    <color key="backgroundColor" name="YP White"/>
                                                </imageView>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CIa-S5-Ak8" userLabel="cellLikeContainer">
                                                    <rect key="frame" x="333" y="0.0" width="44" height="44"/>
                                                    <subviews>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V6C-ZL-xnK" userLabel="likeButton">
                                                            <rect key="frame" x="1" y="1" width="42" height="42"/>
                                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                            <state key="normal" image="like_button_on"/>
                                                        </button>
                                                    </subviews>
                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <state key="normal" image="Sharing"/>
                                <buttonConfiguration key="configuration" style="plain" image="Sharing"/>
                                <connections>
                                    <action selector="didTapShareButton:" destination="2QP-c8-WSX" eventType="touchUpInside" id="hfz-Dv-PqM"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IQh-pr-qu4" userLabel="backwardButton">
                                <rect key="frame" x="9" y="55" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="dJw-1M-9Ne"/>
                                    <constraint firstAttribute="width" constant="48" id="wHH-Ix-36p"/>
                                </constraints>
                                <color key="tintColor" name="YP White"/>
...
