...
        let profileViewController = view as! UIViewController
        let alertPresenter = AlertPresenter(viewController: profileViewController)
        
        let alertModel = AlertModelWith2Buttons(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            buttonTitle1: "Да",
            buttonAction1: { _ in
                ProfileLogoutService.shared.logout()
                let splashViewController = SplashViewController()
                splashViewController.modalPresentationStyle = .fullScreen
                profileViewController.present(splashViewController, animated: true, completion: nil)
            },
...
