...


final class WebViewViewController: UIViewController & WebViewViewControllerProtocol {
    
    private let webView: WKWebView = {
        let webView = WKWebView()
        webView.accessibilityIdentifier = "UnsplashWebView"
        return webView
    }()
    
    private let progressView: UIProgressView = {
        let progressBar = UIProgressView()
        progressBar.progressTintColor = .ypBlack
...
